[#51] Improved ResourceLocator new design